fixed chrome blurry image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -427,7 +427,7 @@ a:hover {
 }
 
 #hero .container {
-  padding-top: 30px;
+  padding-top: 40px;
 }
 
 #hero h1 {
